Проектная работа Russian travel вторая итерация

--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
       
     <section class="photo-grid"> 
       <ul class="photo-grid__list">
-        <li><img class="photo-grid__item" src="./images/train.jpg" alt="Фото поезда"/></li>
-        <li><img class="photo-grid__item" src="./images/atharva-tulsi.jpg" alt="Фото горы"/></li>
-        <li><img class="photo-grid__item" src="./images/tuman.jpg" alt="Фото тумана"/></li>
-        <li><img class="photo-grid__item" src="./images/sochi.jpg" alt="Фото Сочи"/></li>
-        <li><img class="photo-grid__item" src="./images/arisa-chattasa.jpg" alt="Фото колеса на льду"/></li>
-        <li><img class="photo-grid__item" src="./images/baikal.jpg" alt="Фото Байкала"/></li>
-        <li><img class="photo-grid__item" src="./images/elbrus.jpg" alt="Фото горы Эльбрус"/></li>
-        <li><img class="photo-grid__item" src="./images/pedestrian-crossing-sign.jpg" alt="Фото знака пешеходного перехода"/></li>
-        <li><img class="photo-grid__item" src="./images/kamchatka.jpg" alt="Фото Камчатки"/></li>
-        <li><img class="photo-grid__item" src="./images/kamchatka2.jpg" alt="Фото горы на Камчатке"/></li>
-        <li><img class="photo-grid__item" src="./images/baikal2.jpg" alt="Фото скалы на Байкале"/></li>
-        <li><img class="photo-grid__item" src="./images/ergaki.jpg" alt="Фото парка Эргаки"/></li>
+        <li><img class="photo-grid__item" src="./images/train.jpg" alt="Поезд"/></li>
+        <li><img class="photo-grid__item" src="./images/atharva-tulsi.jpg" alt="Гора"/></li>
+        <li><img class="photo-grid__item" src="./images/tuman.jpg" alt="Туман"/></li>
+        <li><img class="photo-grid__item" src="./images/sochi.jpg" alt="Сочи"/></li>
+        <li><img class="photo-grid__item" src="./images/arisa-chattasa.jpg" alt="Колесо на льду"/></li>
+        <li><img class="photo-grid__item" src="./images/baikal.jpg" alt="Байкал"/></li>
+        <li><img class="photo-grid__item" src="./images/elbrus.jpg" alt="Гора Эльбрус"/></li>
+        <li><img class="photo-grid__item" src="./images/pedestrian-crossing-sign.jpg" alt="Знак пешеходного перехода"/></li>
+        <li><img class="photo-grid__item" src="./images/kamchatka.jpg" alt="Камчатка"/></li>
+        <li><img class="photo-grid__item" src="./images/kamchatka2.jpg" alt="Гора на Камчатке"/></li>
+        <li><img class="photo-grid__item" src="./images/baikal2.jpg" alt="Скала на Байкале"/></li>
+        <li><img class="photo-grid__item" src="./images/ergaki.jpg" alt="Парк Эргаки"/></li>
       </ul>
     </section> 
       
